# dara_opsc

./: .gitignore  AVHRR image Georeferencing.ipynb  AVHRR-2-Georeferenced.tif  advanced_analysis_summary.json  pcortest.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Makefile-checkpoint
data/: product.cbor  samunicipal.geojson
data/.ipynb_checkpoints/: dataset-01-checkpoint.json  test_cbor-checkpoint.py
data/2025-07-11_05-39_noaa_apt_137MHz/: dataset.json  product.cbor
notebooks/: AVHRR-2-Georeferenced.tif.aux.xml  advanced_analysis_summary.json  feature_extraction_improved_summary.json  feature_extraction_summary.json  geom.ipynb  leafmap.ipynb  pcortest.ipynb  quality_health_analysis_summary.json  radiometric_analysis_summary.json  raster.ipynb
notebooks/.ipynb_checkpoints/: geom-checkpoint.ipynb  leafmap-checkpoint.ipynb
src/: metrics.py
